distro/rocket: Switch vendor back to poky
Built defconfig mentioned arm-evogro-linux-gnueabi-gcc
as compiler. Let's switch back to arm-poky-linux-gnueabi-gcc
because we don't know yet if this triggers other changes
in the kernel build, apart from the defconfig comment.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-evogro-test/conf/distro/rocket.conf
+++ b/layers/meta-evogro-test/conf/distro/rocket.conf
@@ -3,7 +3,7 @@ require conf/distro/poky.conf
 DISTRO = "rocket"
 DISTRO_NAME = "Rocket Linux by Evogro"
 DISTRO_VERSION = "0.1"
-VENDOR = "evogro"
+VENDOR = "poky"
 
 DISTRO_FEATURES += "systemd wifi"
 DISTRO_FEATURES_remove = "argp irda pcmcia zeroconf x11 ptest multiarch vulkan wayland"
